--- a/Simple Darkmode/Darkmode.html
+++ b/Simple Darkmode/Darkmode.html
@@ -37,6 +37,8 @@
             </div>
         </div>
     </label>
+
+    <div class="box"></div>
     <script src="Darkmode.js"></script>
 </body>
 </html>
