--- a/AJAX/Github Profiles/index.html
+++ b/AJAX/Github Profiles/index.html
@@ -1,35 +1,16 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Javascript.</title>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
-        <style>
-            ul {
-                padding:0;
-                position:relative;
-                left:70px;
-            }
-            li {
-                margin:10px 0;
-            }
-        </style>
-    </head>
-    <body>
-        <form id="userForm">
-            <div class="form-group">
-                <label>Enter Github Username: </label>
-                <input type="text" id="username">
-                <br>
-                <button id="submit" type="submit" name="submit">Submit</button>
-                <p class="red" id="msg"></p>
-            </div>
-        </form>
-        <div class="container">
-            <div id="profile"></div>
-        </div>
 
-    <!-- body -->
-    <!-- Javascript link -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Javascript.</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+</head>
+<body>
+    <h1 id="mainText">Change this text.</h1>
+    <button onclick="changeText()">Change Text.</button>
+    
     <script src="myscripts.js"></script>
-    </body>
+</body>
 </html>
